--- a/.workflow/deploy.yml
+++ b/.workflow/deploy.yml
@@ -25,3 +25,5 @@ jobs:
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
           publish_dir: ./build
+          user_name: sieuhuflit
+          user_email: sieuhuflit+github-actions[bot]@sieuhuflit.github.com
