--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "generate-pdf": "npx mr-pdf --initialDocURLs='https://sieuhuflit.github.io/docs/intro' --contentSelector='article' --paginationSelector='a.pagination-nav__link--next' --excludeSelectors='.margin-vert--xl a' --coverImage='https://docusaurus.io/img/docusaurus.png' --coverTitle='sieuhuflit' --outputPDFFilename book.pdf"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.0",
