--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "generate-pdf": "npx mr-pdf --initialDocURLs='https://sieuhuflit.github.io/docs/intro' --contentSelector='article' --paginationSelector='a.pagination-nav__link--next' --excludeSelectors='.margin-vert--xl a' --coverImage='https://docusaurus.io/img/docusaurus.png' --coverTitle='sieuhuflit' --outputPDFFilename book.pdf"
+    "generate-pdf": "npx mr-pdf --initialDocURLs='https://sieuhuflit.github.io/docs/intro' --contentSelector='article' --paginationSelector='a.pagination-nav__link--next' --excludeSelectors='.margin-vert--xl a' --coverImage='https://docusaurus.io/img/docusaurus.png' --coverTitle='sieuhuflit' --outputPDFFilename book.pdf",
+    "generate-pdf-1": "npx docusaurus-prince-pdf -u https://sieuhuflit.github.io/docs/intro --output docs.pdf"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.0",
     "@docusaurus/preset-classic": "2.4.0",
+    "@docusaurus/theme-classic": "^2.4.0",
+    "@docusaurus/theme-live-codeblock": "^2.4.0",
+    "@docusaurus/theme-search-algolia": "^2.4.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
