feat: adjust them

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "generate-pdf": "npx mr-pdf --initialDocURLs='https://sieuhuflit.github.io/docs/intro' --contentSelector='article' --paginationSelector='a.pagination-nav__link--next' --excludeSelectors='.margin-vert--xl a' --coverImage='https://docusaurus.io/img/docusaurus.png' --coverTitle='sieuhuflit' --pdfFormat='A4' --outputPDFFilename book1.pdf"
+    "generate-pdf": "npx mr-pdf --initialDocURLs='https://sieuhuflit.github.io/docs/intro' --contentSelector='article' --paginationSelector='a.pagination-nav__link--next' --excludeSelectors='.margin-vert--xl a' --coverImage='https://docusaurus.io/img/docusaurus.png' --coverTitle='sieuhuflit' --pdfFormat='A4' --outputPDFFilename book.pdf"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.0",
